// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render component with disabled state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c4 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c2::-ms-check {
  display: none;
}

.c2:disabled {
  pointer-events: none;
}

.c2:checked + .c3 {
  background-color: #0062FF;
  border: none;
}

.c2:not(:checked) + .c3 > * {
  display: none;
}

.c2:hover:not(:disabled)::after,.c2:focus:not(:disabled) + .c2:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c2:disabled + .c3 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c2:checked:disabled + .c3 {
  background-color: #A7C7FF;
  border: none;
}

.c2:checked:disabled + .c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<body>
    <div>
      <div
        class="c0 c1"
      >
        <input
          class="c2"
          data-testid="element"
          disabled=""
          type="checkbox"
        />
        <div
          class="c3 c4"
        >
          <div
            aria-hidden="true"
            class="c5"
            focusable="false"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c5 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c4 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c2::-ms-check {
  display: none;
}

.c2:disabled {
  pointer-events: none;
}

.c2:checked + .c3 {
  background-color: #0062FF;
  border: none;
}

.c2:not(:checked) + .c3 > * {
  display: none;
}

.c2:hover:not(:disabled)::after,.c2:focus:not(:disabled) + .c2:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c2:disabled + .c3 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c2:checked:disabled + .c3 {
  background-color: #A7C7FF;
  border: none;
}

.c2:checked:disabled + .c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<div>
    <div
      class="c0 c1"
    >
      <input
        class="c2"
        data-testid="element"
        disabled=""
        type="checkbox"
      />
      <div
        class="c3 c4"
      >
        <div
          aria-hidden="true"
          class="c5"
          focusable="false"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox should render component with required properties 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c4 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c2::-ms-check {
  display: none;
}

.c2:disabled {
  pointer-events: none;
}

.c2:checked + .c3 {
  background-color: #0062FF;
  border: none;
}

.c2:not(:checked) + .c3 > * {
  display: none;
}

.c2:hover:not(:disabled)::after,.c2:focus:not(:disabled) + .c2:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c2:disabled + .c3 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c2:checked:disabled + .c3 {
  background-color: #A7C7FF;
  border: none;
}

.c2:checked:disabled + .c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<body>
    <div>
      <div
        class="c0 c1"
      >
        <input
          class="c2"
          data-testid="element"
          type="checkbox"
        />
        <div
          class="c3 c4"
        >
          <div
            aria-hidden="true"
            class="c5"
            focusable="false"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c5 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c4 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c2::-ms-check {
  display: none;
}

.c2:disabled {
  pointer-events: none;
}

.c2:checked + .c3 {
  background-color: #0062FF;
  border: none;
}

.c2:not(:checked) + .c3 > * {
  display: none;
}

.c2:hover:not(:disabled)::after,.c2:focus:not(:disabled) + .c2:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c2:disabled + .c3 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c2:checked:disabled + .c3 {
  background-color: #A7C7FF;
  border: none;
}

.c2:checked:disabled + .c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<div>
    <div
      class="c0 c1"
    >
      <input
        class="c2"
        data-testid="element"
        type="checkbox"
      />
      <div
        class="c3 c4"
      >
        <div
          aria-hidden="true"
          class="c5"
          focusable="false"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox should render component with small dimension 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c5 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c4 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c2::-ms-check {
  display: none;
}

.c2:disabled {
  pointer-events: none;
}

.c2:checked + .c3 {
  background-color: #0062FF;
  border: none;
}

.c2:not(:checked) + .c3 > * {
  display: none;
}

.c2:hover:not(:disabled)::after,.c2:focus:not(:disabled) + .c2:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c2:disabled + .c3 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c2:checked:disabled + .c3 {
  background-color: #A7C7FF;
  border: none;
}

.c2:checked:disabled + .c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<body>
    <div>
      <div
        class="c0 c1"
      >
        <input
          class="c2"
          data-testid="element"
          type="checkbox"
        />
        <div
          class="c3 c4"
        >
          <div
            aria-hidden="true"
            class="c5"
            focusable="false"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c5 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c0 {
  width: 16px;
}

fieldset[data-dimension='s'] .c0 {
  height: 16px;
}

.c4 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c2::-ms-check {
  display: none;
}

.c2:disabled {
  pointer-events: none;
}

.c2:checked + .c3 {
  background-color: #0062FF;
  border: none;
}

.c2:not(:checked) + .c3 > * {
  display: none;
}

.c2:hover:not(:disabled)::after,.c2:focus:not(:disabled) + .c2:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c2:disabled + .c3 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c2:checked:disabled + .c3 {
  background-color: #A7C7FF;
  border: none;
}

.c2:checked:disabled + .c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

<div>
    <div
      class="c0 c1"
    >
      <input
        class="c2"
        data-testid="element"
        type="checkbox"
      />
      <div
        class="c3 c4"
      >
        <div
          aria-hidden="true"
          class="c5"
          focusable="false"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
